# METagger

./: CRF.cpp  CRF.cpp~  CRF.h  Events.cpp  Events.h  HashFunction.cpp  HashFunction.h  JBaseProc.cpp  JBaseProc.h  JEvaluate.cpp  JEvaluate.h  JTriggerMgr.cpp  JTriggerMgr.h  LogLinear.cpp  LogLinear.h  Makefile.am  PosMaxEn.cpp  PosMaxEn.cpp~  PosMaxEn.h  SparseMatrix.cpp  SparseMatrix.h  StateNode.cpp  StateNode.h  StrHashTrait.h  TagNode.cpp  TagNode.h  TagsSequence.h  Trellis.cpp  Trellis.h  Verify.h  Viterbi.cpp  Viterbi.h  dev_log.txt  doublevector.cpp  doublevector.h  fadd.h  global.h  lbfgs_c.c  log_linear_context.cpp  mathlib.cpp  (+5 more)
